--- a/map/pages/index/index.wxss
+++ b/map/pages/index/index.wxss
@@ -1,5 +1,11 @@
 /**index.wxss**/
 
+page,
+.container {
+    /* position: absolute; */
+    /* background-color: blue; */
+}
+
 .container {
     position: absolute;
     width: 100%;
@@ -15,6 +21,4 @@
     width: 100%;
     height: 100%;
     z-index: 1;
-    }
-
-    
+}
